[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Michael Agranovskiy <csagranovskiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
